--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar-block">
+                <div class="navbar__logo">
+                    <img src="img/logo.png" alt="">
+                </div>
+                <!-- /.navbar__logo -->
+                <div class="navbar__info">
+                    <div class="navbar__contacts">
+                        <span class="navbar__address">Калуга, Москва, МО</span>
+                        <a href="tel:+7 (495) 42-251-31" class="navbar__phone">+7 (495) 42-251-31
+                        </a>
+                    </div>
+                    <!-- /.nav__contacts -->
+                    <button class="button navbar__button"> Перезвоните мне</button>
+                </div>
+                <!-- /.navbar_info -->
+            </div>
+            <!-- /.navbar-block -->
+        </div>
+        <!-- /.cotainer -->
+    </nav>
+    <!-- /.navbar -->
 </body>
 </html>
