--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <nav class="navbar">
         <div class="container">
@@ -18,7 +20,7 @@
                 <!-- /.navbar__logo -->
                 <div class="navbar__info">
                     <div class="navbar__contacts">
-                        <span class="navbar__address">Калуга, Москва, МО</span>
+                        <p class="navbar__address">Калуга, Москва, МО</p>
                         <a href="tel:+7 (495) 42-251-31" class="navbar__phone">+7 (495) 42-251-31
                         </a>
                     </div>
@@ -32,5 +34,41 @@
         <!-- /.cotainer -->
     </nav>
     <!-- /.navbar -->
+
+
+    <header class="header-block">
+        <div class="container">
+            <div class="header">
+                <div class="header__text">
+                    <h1 class="header__title">
+                            <p class="header__title-text">Внутренняя отделка</p>
+                           <p class="header__title-text">помещений "под ключ"</p>
+                    </h1>
+                    <h3 class="header__subtitle-text">с гарантией качества, прописанной в договоре</h3>
+                    <ul class="header__list">
+                        <li class="header__list-item">
+                            <div class="header__list-icon"> <img src="img/clock.png" alt="clock"></div>
+                            <p class="header__list-text">Точно соблюдаем сроки</p>
+                        </li>
+                        <li class="header__list-item">
+                            <div class="header__list-icon"> <img src="img/calculator.png" alt="calc"></div>
+                            <p class="header__list-text"><span class="list-text">Рассчитаем смету на работы</span>
+                                    и материалы в день обращения</p>
+                        </li>
+                        <li class="header__list-item">
+                            <div class="header__list-icon"> <img src="img/paint-board.png" alt="paint-board"></div>
+                            <p class="header__list-text"><span class="list-text">Предложим более 100 вариантов</span>
+                                    исполнения дизайна Вашего жилья</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header__img">
+                    <img src="img/header-img.png" alt="">
+                </div>
+            </div>
+        </div>
+    </header>
+
 </body>
+
 </html>
