--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
             <div class="header">
                 <div class="header__text">
                     <h1 class="header__title">
-                            <p class="header__title-text">Внутренняя отделка</p>
-                           <p class="header__title-text">помещений "под ключ"</p>
+                            Внутренняя отделка
+                           помещений "под ключ"
                     </h1>
                     <h3 class="header__subtitle-text">с гарантией качества, прописанной в договоре</h3>
                     <ul class="header__list">
