внесены изменения по адаптиву

--- a/src/index.html
+++ b/src/index.html
@@ -45,19 +45,19 @@
                            помещений "под ключ"
                     </h1>
                     <h3 class="header__subtitle-text">с гарантией качества, прописанной в договоре</h3>
-                    <ul class="header__list">
-                        <li class="header__list-item">
-                            <div class="header__list-icon"> <img src="img/clock.png" alt="clock"></div>
-                            <p class="header__list-text">Точно соблюдаем сроки</p>
+                    <ul class="header-list">
+                        <li class="header-list__item">
+                            <div class="header-list__icon"> <img src="img/clock.png" alt="clock"></div>
+                            <p class="header-list__text">Точно соблюдаем сроки</p>
                         </li>
-                        <li class="header__list-item">
-                            <div class="header__list-icon"> <img src="img/calculator.png" alt="calc"></div>
-                            <p class="header__list-text"><span class="list-text">Рассчитаем смету на работы</span>
+                        <li class="header-list__item">
+                            <div class="header-list__icon"> <img src="img/calculator.png" alt="calc"></div>
+                            <p class="header-list__text"><span class="list-text">Рассчитаем смету на работы</span>
                                     и материалы в день обращения</p>
                         </li>
-                        <li class="header__list-item">
-                            <div class="header__list-icon"> <img src="img/paint-board.png" alt="paint-board"></div>
-                            <p class="header__list-text"><span class="list-text">Предложим более 100 вариантов</span>
+                        <li class="header-list__item">
+                            <div class="header-list__icon"> <img src="img/paint-board.png" alt="paint-board"></div>
+                            <p class="header-list__text"><span class="list-text">Предложим более 100 вариантов</span>
                                     исполнения дизайна Вашего жилья</p>
                         </li>
                     </ul>
