--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
             <div class="header">
                 <div class="header__text">
                     <h1 class="header__title">
-                            Внутренняя отделка
-                           помещений "под ключ"
+                        Внутренняя отделка
+                        помещений "под ключ"
                     </h1>
                     <h3 class="header__subtitle-text">с гарантией качества, прописанной в договоре</h3>
                     <ul class="header-list">
@@ -53,12 +53,12 @@
                         <li class="header-list__item">
                             <div class="header-list__icon"> <img src="img/calculator.png" alt="calc"></div>
                             <p class="header-list__text"><span class="list-text">Рассчитаем смету на работы</span>
-                                    и материалы в день обращения</p>
+                                и материалы в день обращения</p>
                         </li>
                         <li class="header-list__item">
                             <div class="header-list__icon"> <img src="img/paint-board.png" alt="paint-board"></div>
                             <p class="header-list__text"><span class="list-text">Предложим более 100 вариантов</span>
-                                    исполнения дизайна Вашего жилья</p>
+                                исполнения дизайна Вашего жилья</p>
                         </li>
                     </ul>
                 </div>
@@ -69,6 +69,35 @@
         </div>
     </header>
 
+    <section class="offer section">
+        <div class="container">
+            <div class="offer-block">
+                <h2 class="section-title offer__title">Мы бесплатно разработаем
+                    дизайн-проект Вашего жилья
+                    и реализуем его!</h2>
+                <!-- /.section-title -->
+                <span class="section-subtitle offer__subtitle">Оставьте заявку на разработку
+                    бесплатного дизайн-проекта!</span>
+                <!-- /.section-subtitle -->
+                <form action="#" class="form offer__form">
+                    <input type="text" class="input offer__input" placeholder="Ваше имя">
+                    <input type="tel" class="input offer__input" placeholder="Ваш телефон">
+                    <button class="button offer__button">Получить бесплатный дизайн-проект</button>
+                </form>
+                <!-- /.form offer__form -->
+                <div class="section-subtex offer__subtex">
+                    <span class="offer__text">Наш менеджер перезвонит Вам 
+                        в течение 60 секунд</span>
+                    <span class="offer__text"><p class="offer__text-text">или перезвоните нам сами</p>
+                        <a href="tel:+7 (495) 42-251-31" class=" section-phone offer__phone">+7 (495) 42-251-31</a></span>
+                </div>
+                <!-- /.section-subtex offer-subtex -->
+            </div>
+            <!-- /.offer-block -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.offer -->
 </body>
 
 </html>
