--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 <div class="navbar__info">
                     <div class="navbar__contacts">
                         <p class="navbar__address">Калуга, Москва, МО</p>
-                        <a href="tel:+7 (495) 42-251-31" class="navbar__phone">+7 (495) 42-251-31
+                        <a href="t:+7 (495) 42-251-31" class="navbar__phone">+7 (495) 42-251-31
                         </a>
                     </div>
                     <!-- /.nav__contacts -->
@@ -89,7 +89,7 @@
                     <span class="offer__text">Наш менеджер перезвонит Вам 
                         в течение 60 секунд</span>
                     <span class="offer__text"><p class="offer__text-text">или перезвоните нам сами</p>
-                        <a href="tel:+7 (495) 42-251-31" class=" section-phone offer__phone">+7 (495) 42-251-31</a></span>
+                        <a href="t:+7 (495) 42-251-31" class=" section-phone offer__phone">+7 (495) 42-251-31</a></span>
                 </div>
                 <!-- /.section-subtex offer-subtex -->
             </div>
