--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                         </a>
                     </div>
                     <!-- /.nav__contacts -->
-                    <button class="button navbar__button"> Перезвоните мне</button>
+                    <a href="t:+7 (495) 42-251-31"><button href="t:+7 (495) 42-251-31" class="button navbar__button"> Перезвоните мне</button></a>
                 </div>
                 <!-- /.navbar_info -->
             </div>
