--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -121,11 +122,72 @@
         </div>
     </div>
     <!-- /.modal -->
+
+    <section class="section portfolio">
+        <div class="container">
+            <h2 class="section-title portfolio__title"><span class="portfolio__title-block">Работая с 2007 года,</span> мы сделали более 500 ремонтов в квартирах и домах</h2>
+
+            <div class="slider">
+                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+                <!-- /.slider__item -->
+            </div>
+                <div class="arrows portfolio__arrows">
+                    <div class="arrows__left">
+                        <img src="img/portfolio/left-arrow.png" alt="">
+                    </div>
+                    <div class="arrows__right">
+                        <img src="img/portfolio/right-arrow.png" alt="">
+                    </div>
+                </div>
+            <!-- /.slider -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section portfolio -->
+
+
     <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
     <script src="js/modal.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.slider').slick({
+                slidesToShow: 3,
+                slidesToScroll: 1,
+                prevArrow: $('.arrows__left'),
+                nextArrow: $('.arrows__right'),
+                responsive: [
+                    {
+                        breakpoint: 1200,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 1,
+                        }
+                    },
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1
+                        }
+                    }
+                ]
+            });
+        });
+    </script>
 </body>
 
 </html>
