сверстал блок прайс

--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,125 @@
     </section>
     <!-- /.offer -->
 
+    <section class="section portfolio">
+        <div class="container">
+            <h2 class="section-title portfolio__title"><span class="portfolio__title-block">Работая с 2007 года,</span> мы сделали более 500 ремонтов в квартирах и домах</h2>
+
+            <div class="slider">
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+                <!-- /.slider__item -->
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+                <!-- /.slider__item -->
+            </div>
+                <div class="arrows portfolio__arrows">
+                    <div class="arrows__left">
+                        <img src="img/portfolio/left-arrow.png" alt="">
+                    </div>
+                    <div class="arrows__right">
+                        <img src="img/portfolio/right-arrow.png" alt="">
+                    </div>
+                </div>
+            <!-- /.slider -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section portfolio -->
+
+    <section class="section price">
+        <div class="container">
+            <h2 class="section-title price__title"><span style="display: block;">У нас очень гибкая система скидок</span> на комплексные работы!</h2>
+            <!-- /.section-title price__title -->
+            <span class="section-subtitle price__subtitle">Прайc на наши услуги</span>
+            <!-- /.section-subtitle price__subtitle -->
+
+            <div class="cards">
+                <div class="card price__card">
+                    <div class="card__image"><img class="card__image-img" src="img/price/bathroom.png" alt=""></div>
+                    <!-- /.card__image -->
+                    <div class="card__text">
+                        <h4 class="card__title">Ремонт ванных комнат и с/у</h4>
+                        <!-- /.card__title -->
+                        <a href="#" class="card__link">Узнать цены</a>
+                        <!-- /.card__link -->
+                    </div>
+                    <!-- /.card__text -->
+                </div>
+                <!-- /.card -->
+                <div class="card price__card">
+                    <div class="card__image"><img class="card__image-img" src="img/price/living.png" alt=""></div>
+                    <!-- /.card__image -->
+                    <div class="card__text">
+                        <h4 class="card__title">Ремонт комнат и квартир</h4>
+                        <!-- /.card__title -->
+                        <a href="#" class="card__link">Узнать цены</a>
+                        <!-- /.card__link -->
+                    </div>
+                    <!-- /.card__text -->
+                </div>
+                <!-- /.card -->
+                <div class="card price__card">
+                    <div class="card__image"><img class="card__image-img" src="img/price/office.png" alt=""></div>
+                    <!-- /.card__image -->
+                    <div class="card__text">
+                        <h4 class="card__title">Отделка офисных помещений</h4>
+                        <!-- /.card__title -->
+                        <a href="#" class="card__link">Узнать цены</a>
+                        <!-- /.card__link -->
+                    </div>
+                    <!-- /.card__text -->
+                </div>
+                <!-- /.card -->
+                <div class="card price__card">
+                    <div class="card__image"><img class="card__image-img" src="img/price/buildings.png" alt=""></div>
+                    <!-- /.card__image -->
+                    <div class="card__text">
+                        <h4 class="card__title">Ремонт в новостройках</h4>
+                        <!-- /.card__title -->
+                        <a href="#" class="card__link">Узнать цены</a>
+                        <!-- /.card__link -->
+                    </div>
+                    <!-- /.card__text -->
+                </div>
+                <!-- /.card -->
+                <div class="card price__card">
+                    <div class="card__image"><img class="card__image-img" src="img/price/kitchen.png" alt=""></div>
+                    <!-- /.card__image -->
+                    <div class="card__text">
+                        <h4 class="card__title">Ремонт кухонь</h4>
+                        <!-- /.card__title -->
+                        <a href="#" class="card__link">Узнать цены</a>
+                        <!-- /.card__link -->
+                    </div>
+                    <!-- /.card__text -->
+                </div>
+                <!-- /.card -->
+                <div class="card price__card">
+                    <div class="card__image"><img class="card__image-img" src="img/price/houses.png" alt=""></div>
+                    <!-- /.card__image -->
+                    <div class="card__text">
+                        <h4 class="card__title">Ремонт дач и коттеджей</h4>
+                        <!-- /.card__title -->
+                        <a href="#" class="card__link">Узнать цены</a>
+                        <!-- /.card__link -->
+                    </div>
+                    <!-- /.card__text -->
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.cards -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section price -->
+
     <div class="modal" id="modal">
         <div class="modal__block">
             <div class="modal-dialog">
@@ -122,39 +241,6 @@
         </div>
     </div>
     <!-- /.modal -->
-
-    <section class="section portfolio">
-        <div class="container">
-            <h2 class="section-title portfolio__title"><span class="portfolio__title-block">Работая с 2007 года,</span> мы сделали более 500 ремонтов в квартирах и домах</h2>
-
-            <div class="slider">
-                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
-                <!-- /.slider__item -->
-                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
-                <!-- /.slider__item -->
-                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
-                <!-- /.slider__item -->
-                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
-                <!-- /.slider__item -->
-                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
-                <!-- /.slider__item -->
-                <div class="slider__item"><img class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
-                <!-- /.slider__item -->
-            </div>
-                <div class="arrows portfolio__arrows">
-                    <div class="arrows__left">
-                        <img src="img/portfolio/left-arrow.png" alt="">
-                    </div>
-                    <div class="arrows__right">
-                        <img src="img/portfolio/right-arrow.png" alt="">
-                    </div>
-                </div>
-            <!-- /.slider -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.section portfolio -->
-
 
     <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
