--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
@@ -105,30 +106,37 @@
 
     <section class="section portfolio">
         <div class="container">
-            <h2 class="section-title portfolio__title"><span class="portfolio__title-block">Работая с 2007 года,</span> мы сделали более 500 ремонтов в квартирах и домах</h2>
+            <h2 class="section-title portfolio__title"><span class="portfolio__title-block">Работая с 2007 года,</span>
+                мы сделали более 500 ремонтов в квартирах и домах</h2>
 
             <div class="slider">
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
+                        class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
+                        class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
+                        class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
+                        class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
+                        class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px" class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
+                        class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
                 <!-- /.slider__item -->
             </div>
-                <div class="arrows portfolio__arrows">
-                    <div class="arrows__left">
-                        <img src="img/portfolio/left-arrow.png" alt="">
-                    </div>
-                    <div class="arrows__right">
-                        <img src="img/portfolio/right-arrow.png" alt="">
-                    </div>
+            <div class="arrows portfolio__arrows">
+                <div class="arrows__left">
+                    <img src="img/portfolio/left-arrow.png" alt="">
                 </div>
+                <div class="arrows__right">
+                    <img src="img/portfolio/right-arrow.png" alt="">
+                </div>
+            </div>
             <!-- /.slider -->
         </div>
         <!-- /.container -->
@@ -137,13 +145,14 @@
 
     <section class="section price">
         <div class="container">
-            <h2 class="section-title price__title"><span style="display: block;">У нас очень гибкая система скидок</span> на комплексные работы!</h2>
+            <h2 class="section-title price__title"><span style="display: block;">У нас очень гибкая система
+                    скидок</span> на комплексные работы!</h2>
             <!-- /.section-title price__title -->
             <span class="section-subtitle price__subtitle">Прайc на наши услуги</span>
             <!-- /.section-subtitle price__subtitle -->
 
             <div class="cards">
-                <div class="card price__card">
+                <div class="card price__card wow fadeInUp">
                     <div class="card__image"><img class="card__image-img" src="img/price/bathroom.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -155,7 +164,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card">
+                <div class="card price__card wow fadeInUp">
                     <div class="card__image"><img class="card__image-img" src="img/price/living.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -167,7 +176,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card">
+                <div class="card price__card wow fadeInUp">
                     <div class="card__image"><img class="card__image-img" src="img/price/office.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -179,7 +188,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card">
+                <div class="card price__card wow fadeInUp">
                     <div class="card__image"><img class="card__image-img" src="img/price/buildings.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -191,7 +200,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card">
+                <div class="card price__card wow fadeInUp">
                     <div class="card__image"><img class="card__image-img" src="img/price/kitchen.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -203,7 +212,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card">
+                <div class="card price__card wow fadeInUp">
                     <div class="card__image"><img class="card__image-img" src="img/price/houses.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -242,14 +251,16 @@
     </div>
     <!-- /.modal -->
 
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/modal.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script>
-        $(document).ready(function() {
+        /*инициализация wow библиотеки*/
+        new WOW().init();
+        /*скрипт слайдера*/
+        $(document).ready(function () {
             $('.slider').slick({
                 slidesToShow: 3,
                 slidesToScroll: 1,
