--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
             <!-- /.section-subtitle price__subtitle -->
 
             <div class="cards">
-                <div class="card price__card wow fadeInUp">
+                <div class="card price__card wow bounceOut" data-wow-delay="2s">
                     <div class="card__image"><img class="card__image-img" src="img/price/bathroom.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -164,7 +164,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card wow fadeInUp">
+                <div class="card price__card wow fadeInUp" data-wow-delay="2s">
                     <div class="card__image"><img class="card__image-img" src="img/price/living.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -176,7 +176,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card wow fadeInUp">
+                <div class="card price__card wow fadeInUp" data-wow-delay="0.3s">
                     <div class="card__image"><img class="card__image-img" src="img/price/office.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -188,7 +188,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card wow fadeInUp">
+                <div class="card price__card wow fadeInUp" data-wow-delay="0.4s">
                     <div class="card__image"><img class="card__image-img" src="img/price/buildings.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -200,7 +200,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card wow fadeInUp">
+                <div class="card price__card wow fadeInUp" data-wow-delay="0.5s">
                     <div class="card__image"><img class="card__image-img" src="img/price/kitchen.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -212,7 +212,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card wow fadeInUp">
+                <div class="card price__card wow fadeInUp" data-wow-delay="0.6s">
                     <div class="card__image"><img class="card__image-img" src="img/price/houses.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -250,6 +250,24 @@
         </div>
     </div>
     <!-- /.modal -->
+
+    <section class="section brif">
+        <div class="container">
+            <div class="brif-block">
+                <div class="interview brif__interview">
+                    <h3 class="interview__tite"></h3>
+                </div>
+                <!-- /.interview brif__interview -->
+                <div class="form brif__form">
+
+                </div>
+                <!-- /.form brif__form -->
+            </div>
+            <!-- /.brif-block -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section brif -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
