--- a/src/index.html
+++ b/src/index.html
@@ -110,23 +110,23 @@
                 мы сделали более 500 ремонтов в квартирах и домах</h2>
 
             <div class="slider">
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
-                        class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+                <div class="slider__item"><img style="width: 370px" class="slider__image"
+                        src="img/portfolio/slider-1.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
-                        class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+                <div class="slider__item"><img style="width: 370px" class="slider__image"
+                        src="img/portfolio/slider-2.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
-                        class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+                <div class="slider__item"><img style="width: 370px" class="slider__image"
+                        src="img/portfolio/slider-3.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
-                        class="slider__image" src="img/portfolio/slider-1.jpg" alt=""></div>
+                <div class="slider__item"><img style="width: 370px" class="slider__image"
+                        src="img/portfolio/slider-1.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
-                        class="slider__image" src="img/portfolio/slider-2.jpg" alt=""></div>
+                <div class="slider__item"><img style="width: 370px" class="slider__image"
+                        src="img/portfolio/slider-2.jpg" alt=""></div>
                 <!-- /.slider__item -->
-                <div class="slider__item" style="width: 370px; margin-right: 30px;"><img style="width: 370px"
-                        class="slider__image" src="img/portfolio/slider-3.jpg" alt=""></div>
+                <div class="slider__item"><img style="width: 370px" class="slider__image"
+                        src="img/portfolio/slider-3.jpg" alt=""></div>
                 <!-- /.slider__item -->
             </div>
             <div class="arrows portfolio__arrows">
@@ -200,7 +200,7 @@
                     <!-- /.card__text -->
                 </div>
                 <!-- /.card -->
-                <div class="card price__card wow fadeInUp" data-wow-delay="0.5s">
+                <div class="card price__card wow fadelnUp" data-wow-delay="0.5s">
                     <div class="card__image"><img class="card__image-img" src="img/price/kitchen.png" alt=""></div>
                     <!-- /.card__image -->
                     <div class="card__text">
@@ -255,11 +255,39 @@
         <div class="container">
             <div class="brif-block">
                 <div class="interview brif__interview">
-                    <h3 class="interview__tite"></h3>
+                    <h3 class="interview__title">Мы можем озвучить Вам примерную стоимость работы и материалов по
+                        телефону</h3>
+                    <span class="interview__subtitle">Для этого нужно ответить на 4 вопроса:</span>
+                    <ul class="interview-list">
+                        <li class="interview-list__item">
+                            <span class="interview-list__counter">1.</span>
+                            <span class="interview-list__text">Какова площадь помещения?</span>
+                        </li>
+                        <li class="interview-list__item">
+                            <span class="interview-list__counter">2.</span>
+                            <span class="interview-list__text">У Вас новостройка или вторичное жилье?</span>
+                        </li>
+                        <li class="interview-list__item">
+                            <span class="interview-list__counter">3.</span>
+                            <span class="interview-list__text">Где находится помещение, в котором будет производиться
+                                ремонт?</span>
+                        </li>
+                        <li class="interview-list__item">
+                            <span class="interview-list__counter">4.</span>
+                            <span class="interview-list__text">Назначение помещения?</span>
+                        </li>
+                    </ul>
                 </div>
                 <!-- /.interview brif__interview -->
                 <div class="form brif__form">
-
+                    <h3 class="form__title">Оставьте заявку на бесплатный <span class="form-title__line">расчет ремонта по телефону</span></h3>
+                    <span class="form__subtitle">Для этого заполните форму ниже</span>
+                    <form class="form-block" action="#">
+                        <input type="text" class="input brif__input" placeholder="Ваше имя">
+                        <input type="tel" class="input brif__input" placeholder="Ваш телефон">
+                        <button class="button brif__button">Рассчитать стоимость</button>
+                        <span class="form__description">Мы перезвоним Вам в течение 60 секунд</span>
+                    </form>
                 </div>
                 <!-- /.form brif__form -->
             </div>
