--- a/src/index.html
+++ b/src/index.html
@@ -282,9 +282,10 @@
                 <div class="form brif__form">
                     <h3 class="form__title">Оставьте заявку на бесплатный <span class="form-title__line">расчет ремонта по телефону</span></h3>
                     <span class="form__subtitle">Для этого заполните форму ниже</span>
-                    <form class="form-block" action="#">
-                        <input type="text" class="input brif__input" placeholder="Ваше имя">
-                        <input type="tel" class="input brif__input" placeholder="Ваш телефон">
+                    <form action="#" id="brif-form" class="form-block">
+                        <input type="text" name="username" class="input brif__input" placeholder="Ваше имя">
+                        <input type="tel" name="phone" class="input brif__input phone" placeholder="Ваш телефон">
+                        <input type="email" name="email" class="input brif__input" placeholder="Ваш email">
                         <button class="button brif__button">Рассчитать стоимость</button>
                         <span class="form__description">Мы перезвоним Вам в течение 60 секунд</span>
                     </form>
@@ -302,35 +303,9 @@
     <script src="js/modal.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/wow.min.js"></script>
-    <script>
-        /*инициализация wow библиотеки*/
-        new WOW().init();
-        /*скрипт слайдера*/
-        $(document).ready(function () {
-            $('.slider').slick({
-                slidesToShow: 3,
-                slidesToScroll: 1,
-                prevArrow: $('.arrows__left'),
-                nextArrow: $('.arrows__right'),
-                responsive: [
-                    {
-                        breakpoint: 1200,
-                        settings: {
-                            slidesToShow: 2,
-                            slidesToScroll: 1,
-                        }
-                    },
-                    {
-                        breakpoint: 768,
-                        settings: {
-                            slidesToShow: 1,
-                            slidesToScroll: 1
-                        }
-                    }
-                ]
-            });
-        });
-    </script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
