--- a/src/index.html
+++ b/src/index.html
@@ -231,6 +231,55 @@
     </section>
     <!-- /.section price -->
 
+    <section class="section steps">
+        <div class="container">
+            <h2 class="section-title steps__title">Наши специалисты готовы выехать на замер в любое удобное для Вас время</h2>
+            <!-- /.section-title steps__title -->
+            <span class="section-subtitle steps__subtitle">5 шагов до ремонта</span>
+            <!-- /.section-subtitle steps__subtitle -->
+            <div class="steps-block">
+                <div class="step">
+                    <div class="step__image"><img src="img/steps/woman.png" alt=""></div>
+                    <!-- /.step__image -->
+                    <p class="step__text">Вы звоните нам или оставляете заявку</p>
+                    <!-- /.step text -->
+                </div>
+                <!-- /.step -->
+                <div class="step">
+                    <div class="step__image"><img src="img/steps/clock.png" alt=""></div>
+                    <!-- /.step__image -->
+                    <p class="step__text">Согласуем удобное для Вас время выезда специалиста на замер</p>
+                    <!-- /.step text -->
+                </div>
+                <!-- /.step -->
+                <div class="step">
+                    <div class="step__image"><img src="img/steps/money.png" alt=""></div>
+                    <!-- /.step__image -->
+                    <p class="step__text">Рассчитываем смету согласовываем с Вами</p>
+                    <!-- /.step text -->
+                </div>
+                <!-- /.step -->
+                <div class="step">
+                    <div class="step__image"><img src="img/steps/document.png" alt=""></div>
+                    <!-- /.step__image -->
+                    <p class="step__text">Подписываем договор закупаем материал по оптовым ценам</p>
+                    <!-- /.step text -->
+                </div>
+                <!-- /.step -->
+                <div class="step">
+                    <div class="step__image"><img src="img/steps/calendar.png" alt=""></div>
+                    <!-- /.step__image -->
+                    <p class="step__text">Выполняем ремонт в указанные сроки</p>
+                    <!-- /.step text -->
+                </div>
+                <!-- /.step -->
+            </div>
+            <!-- /.block -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.section steps -->
+
     <div class="modal" id="modal">
         <div class="modal__block">
             <div class="modal-dialog">
